change introduction to grid and fix z-index issues

--- a/Liam/liam.css
+++ b/Liam/liam.css
@@ -177,6 +177,8 @@ p {
 #main-content {
   position: relative;
   z-index: 1;
+  width: 90%;
+  max-width: 1000px;
   pointer-events: none;
 }
 
@@ -184,7 +186,7 @@ p {
   pointer-events: none;
 }
 
-#main-content *:not(section) {
+#main-content *:not(section, div) {
   pointer-events: auto;
 }
 
@@ -226,30 +228,44 @@ p {
 
 /* ===== PAGE SECTIONS ===== */
 
+/* == General == */
+#introduction,
+#about-me {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.on-medium {
+  display: none;
+}
+
 /* == Introduction == */
+
 #introduction {
+  margin-top: 200px;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  display: grid;
+  justify-items: center;
 }
 
 #introduction img {
   height: 300px;
   border-radius: 3px;
+  grid-column: 1 / -1;
 }
 
-#introduction h1 {
+#introduction .text {
   text-align: center;
+  grid-column: 1 / -1;
+  padding-top: 8px;
+  margin-bottom: 8px;
 }
 
 #scroll-span {
-  margin-top: 10px;
   color: var(--text-color);
+  grid-column: 1 / -1;
 }
 
-#introduction::after {
+#introduction #scroll-span::after {
   content: "";
   position: absolute;
   top: 100%;
@@ -260,15 +276,67 @@ p {
   width: 1px;
   background-color: var(--heading-color);
   pointer-events: none;
-  backface-visibility: hidden;
+  /*backface-visibility: hidden;*/
 
   animation: opacityIn 2s forwards;
 }
 
-/* == Introduction == */
+/* == About me == */
 
+#about-me {
+  margin-top: 450px;
+  width: 100%;
+  padding: 30px 0;
 
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
 
+#about-me .content {
+  grid-column: 1 / -1;
+  width: 100%;
+}
+
+/* == Media queries == */
+
+@media (min-width: 768px) {
+  #introduction,
+  #about-me {
+    grid-template-columns: repeat(8, 1fr);
+  }
+
+  #introduction .text {
+    text-align: start;
+    grid-column: 1 / 5;
+    grid-row: 2/ 3;
+    margin-bottom: 48px;
+  }
+
+  #introduction h1,
+  #introduction .on-medium {
+    display: inline-block;
+  }
+
+  #introduction b {
+    color: var(--heading-color);
+  }
+
+  #introduction #scroll-span {
+    grid-column: 1 / 5;
+    grid-row: 3/ 4;
+  }
+
+  #introduction img {
+    height: 400px;
+    grid-column: 5 / -1;
+    grid-row: 1/ 4;
+  }
+
+  #about-me .content {
+    grid-column: 1 / 5;
+    width: 100%;
+  }
+}
 
 /* ===== Animations ===== */
 #scroll-span span {
